-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 18
-
Component/s: hotspot
-
b20
-
x86_64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8276342 | 17.0.3-oracle | Harold Seigel | P4 | Resolved | Fixed | b01 |
| JDK-8276729 | 17.0.2 | Zhengyu Gu | P4 | Resolved | Fixed | b04 |
| JDK-8276381 | 11.0.15-oracle | Harold Seigel | P4 | Resolved | Fixed | b01 |
| JDK-8279959 | 11.0.15 | Zhengyu Gu | P4 | Resolved | Fixed | b01 |
| JDK-8276785 | 11.0.14 | Zhengyu Gu | P4 | Closed | Fixed | b02 |
com/sun/jdi/RedefineCrossEvent.java
Here's a snippet from the log file:
----------System.out:(30/2488)----------
vmOpts: '-Xmx768m -XX:MaxRAMPercentage=4.16667 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13934/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/e0a31b42-087a-47ac-bcb3-5dfbecc2c39b/runs/a4f5fde5-fe07-4985-8e04-96641cfc5aed/testoutput/test-support/jtreg_open_test_jdk_jdk_jdi/tmp -ea -esa'
javaOpts: '-XX:+CreateCoredumpOnCrash -XX:+UseZGC'
JVM version:18-ea
JDI version: 18.0
JVM description: Java Debug Interface (Reference Implementation) version 18.0
Java Debug Wire Protocol (Reference Implementation) version 18.0
JVM Debug Interface version 18.0
JVM version 18-ea (Java HotSpot(TM) 64-Bit Server VM, mixed mode, sharing)
Howdy!
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/classLoaderData.cpp:362
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/a2dc162d-743b-4800-9e92-31f85abb45b1-S1317/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6cc982f3-0197-4d8f-b494-7dc978f0fec0/runs/e0a416ab-5d4f-4994-aa46-3742148ba1d7/workspace/open/src/hotspot/share/classfile/classLoaderData.cpp:362), pid=3968, tid=4018
# assert(m != __null) failed: NULL mirror
#
# JRE version: Java(TM) SE Runtime Environment (18.0+17) (fastdebug build 18-ea+17-971)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+17-971, mixed mode, sharing, tiered, compressed class ptrs, z gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x97c055] ClassLoaderData::loaded_classes_do(KlassClosure*)+0x245
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13934/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/e0a31b42-087a-47ac-bcb3-5dfbecc2c39b/runs/a4f5fde5-fe07-4985-8e04-96641cfc5aed/testoutput/test-support/jtreg_open_test_jdk_jdk_jdi/scratch/0/core.3968)
#
# An error report file with more information is saved as:
# /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13934/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/e0a31b42-087a-47ac-bcb3-5dfbecc2c39b/runs/a4f5fde5-fe07-4985-8e04-96641cfc5aed/testoutput/test-support/jtreg_open_test_jdk_jdk_jdi/scratch/0/hs_err_pid3968.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(24/1767)----------
[0ms] run args: [-redefstart, -redefevent, ClassesByName2Targ]
[316ms] Redefining class ClassesByName2Targ (loaded by instance of jdk.internal.loader.ClassLoaders$AppClassLoader(id=47))
[319ms] Redefining class ClassesByName2Targ (loaded by instance of jdk.internal.loader.ClassLoaders$AppClassLoader(id=47))
com.sun.jdi.VMDisconnectedException
at jdk.jdi/com.sun.tools.jdi.TargetVM.waitForReply(TargetVM.java:310)
at jdk.jdi/com.sun.tools.jdi.VirtualMachineImpl.waitForTargetReply(VirtualMachineImpl.java:1173)
at jdk.jdi/com.sun.tools.jdi.PacketStream.waitForReply(PacketStream.java:89)
at jdk.jdi/com.sun.tools.jdi.JDWP$VirtualMachine$AllClassesWithGeneric.waitForReply(JDWP.java:1610)
at jdk.jdi/com.sun.tools.jdi.JDWP$VirtualMachine$AllClassesWithGeneric.process(JDWP.java:1596)
at jdk.jdi/com.sun.tools.jdi.VirtualMachineImpl.retrieveAllClasses(VirtualMachineImpl.java:1143)
at jdk.jdi/com.sun.tools.jdi.VirtualMachineImpl.allClasses(VirtualMachineImpl.java:338)
at ClassesByName2Test.runTests(ClassesByName2Test.java:163)
at TestScaffold.startTests(TestScaffold.java:431)
at ClassesByName2Test.main(ClassesByName2Test.java:123)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:568)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
at java.base/java.lang.Thread.run(Thread.java:833)
JavaTest Message: Test threw exception: com.sun.jdi.VMDisconnectedException
JavaTest Message: shutting down test
result: Failed. Execution failed: `main' threw exception: com.sun.jdi.VMDisconnectedException
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007f2bbc2b1e70): JavaThread "JDWP Transport Listener: dt_socket" daemon [_thread_in_vm, id=4018, stack(0x00007f2ba43f8000,0x00007f2ba44f9000)]
Stack: [0x00007f2ba43f8000,0x00007f2ba44f9000], sp=0x00007f2ba44f7860, free space=1022k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x97c055] ClassLoaderData::loaded_classes_do(KlassClosure*)+0x245
V [libjvm.so+0x986c2d] ClassLoaderDataGraph::loaded_classes_do(KlassClosure*)+0x1bd
V [libjvm.so+0x11e0258] JvmtiGetLoadedClasses::getLoadedClasses(JvmtiEnv*, int*, _jclass***)+0xd8
V [libjvm.so+0x114077a] jvmti_GetLoadedClasses+0x10a
C [libjdwp.so+0xce19] allClasses1.part.0+0x39
C [libjdwp.so+0xde73] allClassesWithGeneric+0x23
C [libjdwp.so+0x134a9] debugLoop_run+0x299
C [libjdwp.so+0x26ef4] attachThread+0x54
V [libjvm.so+0x11e1c5b] JvmtiAgentThread::call_start_function()+0x17b
V [libjvm.so+0x18910ec] JavaThread::thread_main_inner()+0x27c
V [libjvm.so+0x1897690] Thread::call_run()+0x100
V [libjvm.so+0x15753d4] thread_native_entry(Thread*)+0x104
Since this assertion failure happened in
ClassLoaderData::loaded_classes_do(), I'm starting this
bug off in hotspot/runtime for initial triage.
- backported by
-
JDK-8276342 com/sun/jdi/RedefineCrossEvent.java failed "assert(m != __null) failed: NULL mirror"
-
- Resolved
-
-
JDK-8276381 com/sun/jdi/RedefineCrossEvent.java failed "assert(m != __null) failed: NULL mirror"
-
- Resolved
-
-
JDK-8276729 com/sun/jdi/RedefineCrossEvent.java failed "assert(m != __null) failed: NULL mirror"
-
- Resolved
-
-
JDK-8279959 com/sun/jdi/RedefineCrossEvent.java failed "assert(m != __null) failed: NULL mirror"
-
- Resolved
-
-
JDK-8276785 com/sun/jdi/RedefineCrossEvent.java failed "assert(m != __null) failed: NULL mirror"
-
- Closed
-
- relates to
-
JDK-8276943 Backout JDK-8274338 11u backport
-
- Resolved
-
-
JDK-8274753 ZGC: SEGV in MetaspaceShared::link_shared_classes
-
- Resolved
-
-
JDK-8275318 loaded_classes_do may see ArrayKlass before InstanceKlass is loaded
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/3a351580
-
Commit
openjdk/jdk11u-dev/40d7d034
-
Commit
openjdk/jdk17u/6c86a417
-
Commit
openjdk/jdk/172aed1a
-
Review
openjdk/jdk11u-dev/584
-
Review
openjdk/jdk11u-dev/632
-
Review
openjdk/jdk17u/226
-
Review
openjdk/jdk/5935